<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_data"
        android:textSize="40sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/IDtextView"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:hint="@string/id"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/NametextView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@+id/IDtextView"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:hint="@string/your_name"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/MobiletextView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/NametextView"
        android:layout_marginTop="32dp"
        android:hint="@string/mobile_number"
        android:textSize="25sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <EditText
        android:id="@+id/AddresstextView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/MobiletextView"
        android:layout_marginTop="32dp"
        android:hint="@string/address"
        android:textSize="25sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <EditText
        android:id="@+id/PintextView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/AddresstextView"
        android:layout_marginTop="32dp"
        android:hint="@string/pin_code"
        android:textSize="25sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <Button
        android:id="@+id/Insertbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Insert Data"
        android:layout_below="@+id/PintextView"
        android:layout_marginTop="32dp"
        android:hint="@string/pin_code"
        android:textSize="25sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <TextView
        android:id="@+id/SearchtextView22"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/Insertbutton"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Searh Customer Details"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/SearchtextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchtextView22"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/enter_id"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Searchtbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchtextView"
        android:layout_marginTop="32dp"
        android:text="@string/search_data"
        android:textSize="25sp"
        android:textColor="#000000"
        android:gravity="center"/>

</RelativeLayout>